src/objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <description>A client&apos;s financial account, such as an investment account, bank account, or insurance policy.</description>
    <fields>
        <fullName>APR__c</fullName>
        <inlineHelpText>Kindly fill the Annual Percentage Rate for this Financial Account. Do not leave this blank.</inlineHelpText>
        <label>APR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>401K</fullName>
                </value>
                <value>
                    <fullName>529 Account</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retail Brokerage</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Saving</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Beneficiary__c</fullName>
        <label>Beneficiary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__APY__c</fullName>
        <inlineHelpText>Kindly fill the Annual Yield Rate for this Financial Account. Do not leave this blank.</inlineHelpText>
        <label>APY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Address1__c</fullName>
        <description>Street address line 1 for mailing address.</description>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Address2__c</fullName>
        <description>Street address line 2 for mailing address.</description>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ApplicationDate__c</fullName>
        <description>Date when the client submitted the financial account application.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__AssetRebalance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Rebalance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__AvailableCredit__c</fullName>
        <label>Available Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__AverageBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BalanceLastStatement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance Last Statement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BookedDate__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__CashBalance__c</fullName>
        <label>Cash Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__CashLimit__c</fullName>
        <label>Cash Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__City__c</fullName>
        <description>City for mailing address.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CloseDate__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__CollateralDesc__c</fullName>
        <label>Collateral Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Country__c</fullName>
        <description>Country for mailing address.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF( CreatedBy.Id  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Me</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentPostedBalance__c</fullName>
        <label>Current Posted Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__DailyWithdrawalLimit__c</fullName>
        <label>Daily Withdrawal Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Discretionary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisor has discretionary trading authority for this financial account.</description>
        <label>Discretionary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__DrawPeriodMonths__c</fullName>
        <label>Draw Period(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__EscrowBalance__c</fullName>
        <label>Escrow Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpectedCloseDate__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountChargesAndFees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charges And Fees</label>
        <referenceTo>FinServ__ChargesAndFees__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountSource__c</fullName>
        <description>Indicates source of financial account data, such as a third party integration or manual entry.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Discount Brokerage</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Cash Management Account</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>Fixed Annuity</fullName>
                </value>
                <value>
                    <fullName>Variable Annuity</fullName>
                </value>
                <value>
                    <fullName>Managed Account</fullName>
                </value>
                <value>
                    <fullName>Individual Life</fullName>
                </value>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Variable Life</fullName>
                </value>
                <value>
                    <fullName>Whole Life</fullName>
                </value>
                <value>
                    <fullName>401K</fullName>
                </value>
                <value>
                    <fullName>529 Account</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HardwareSerial__c</fullName>
        <description>The serial number of hardware associated with the account.</description>
        <label>Hardware Serial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__HeldAway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is managed or administered by our firm.</description>
        <label>Held Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__HoldingCount__c</fullName>
        <description>Number of holdings within this financial account</description>
        <label>Number of Holdings</label>
        <summaryForeignKey>FinServ__FinancialHolding__c.FinServ__FinancialAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this financial account rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Accounts</relationshipLabel>
        <relationshipName>HouseholdFinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__IncomingVolume__c</fullName>
        <description>The volume of transactions coming in through the service.</description>
        <label>Incoming Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__InsuredAmount__c</fullName>
        <label>Insured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestRate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentObjectives__c</fullName>
        <label>Investment Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Tax Optimization</fullName>
                </value>
                <value>
                    <fullName>Liquidity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__JointOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Joint Owner</relationshipLabel>
        <relationshipName>FAJointOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDate__c</fullName>
        <label>Last Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LienHolder__c</fullName>
        <label>Lien Holder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanAmount__c</fullName>
        <inlineHelpText>Kindly fill this field for your Loan</inlineHelpText>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanEndDate__c</fullName>
        <label>Loan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanTermMonths__c</fullName>
        <label>Loan Term(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is actively managed by our firm.</description>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ModelPortfolio__c</fullName>
        <description>The model asset allocation for this financial account.</description>
        <label>Model Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Aggressive</fullName>
                </value>
                <value>
                    <fullName>Very Aggressive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Nickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OpenDate__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__OutgoingVolume__c</fullName>
        <description>The volume of transactions going out through the service.</description>
        <label>Outgoing Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OverdraftAllowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftLinkedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overdraft/Linked Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts (Overdraft Linked Account)</relationshipLabel>
        <relationshipName>FinancialAccount_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftProtection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the customer accepts overdraft protection and its associated fees.</description>
        <label>Overdraft Protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__OwnerType__c</fullName>
        <label>Owner Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PaperlessDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deliver documents electronically.</description>
        <label>Paperless Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentFrequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quaterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                    <isActive>false</isActive>
                    <label>Annual</label>
                </value>
                <value>
                    <fullName>Semiannual</fullName>
                    <isActive>false</isActive>
                    <label>Semiannual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PendingDeposits__c</fullName>
        <label>Pending Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PendingWithdrawals__c</fullName>
        <label>Pending Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance1Yr__c</fullName>
        <label>Performance 1Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance3Yr__c</fullName>
        <label>Performance 3Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceMTD__c</fullName>
        <label>Performance MTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceQTD__c</fullName>
        <label>Performance QTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceYTD__c</fullName>
        <label>Performance YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PolicyTerm__c</fullName>
        <description>Length of time the policyholder pays an insurance premium.</description>
        <label>Policy Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PostalCode__c</fullName>
        <description>Postal code for mailing address.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Premium__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Primary Owner</relationshipLabel>
        <relationshipName>ClientFinancialAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PrincipalBalance__c</fullName>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance policy product name.</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Account Products</relationshipLabel>
        <relationshipName>FinancialAccountProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RebalanceFrequency__c</fullName>
        <label>Rebalance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__RepaymentPeriodMonths__c</fullName>
        <label>Repayment Period(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RoutingNumber__c</fullName>
        <label>RoutingNumber</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ServiceProvider__c</fullName>
        <description>Custodian or recordkeeper of this financial account.</description>
        <label>Service Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ServiceType__c</fullName>
        <description>The type of service undertaken.</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Lockbox</fullName>
                </value>
                <value>
                    <fullName>Positive Pay</fullName>
                </value>
                <value>
                    <fullName>Business Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>Remote Deposit Capture</fullName>
                </value>
                <value>
                    <fullName>Purchase Cards</fullName>
                </value>
                <value>
                    <fullName>Credit Cards</fullName>
                </value>
                <value>
                    <fullName>Zero Balance Account</fullName>
                </value>
                <value>
                    <fullName>Bill Presentment</fullName>
                </value>
                <value>
                    <fullName>Controlled Disbursement</fullName>
                </value>
                <value>
                    <fullName>Sweep to Repo</fullName>
                </value>
                <value>
                    <fullName>Sweep to Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Approval/Loan committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Escheat</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Charged off</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Setup Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__State__c</fullName>
        <description>State for mailing address.</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StatementFrequency__c</fullName>
        <label>Statement Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Charge-off</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Paid out</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TargetLimit__c</fullName>
        <description>The limit on items or value that the service will process.</description>
        <label>Target Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxID__c</fullName>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Nonqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>